Rough basic setup

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic setup with Navigator, Injector, Backbone-command and Backbone-injector</title>
+	<title>Navigator Injector Backbone Command TodoMVC</title>
+
+	<link rel="stylesheet" href="js/vendors/todomvc-common/base.css" />
 
 	<script data-main="js/app/ApplicationRouter" src="js/vendors/requirejs/require.js"></script>
 </head>
