--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<title>Navigator Injector Backbone Command TodoMVC</title>
 
 	<link rel="stylesheet" href="js/vendors/todomvc-common/base.css" />
+	<link rel="stylesheet" href="css/style.css" />
 
 	<script data-main="js/app/ApplicationRouter" src="js/vendors/requirejs/require.js"></script>
 </head>
