Working rewrite rules, but broken live-reload?

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Navigator Injector Backbone Command TodoMVC</title>
 
+	<base href="/" />
 	<link rel="stylesheet" href="js/vendors/todomvc-common/base.css" />
 	<link rel="stylesheet" href="css/style.css" />
 
