--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Navigator Injector Backbone Command TodoMVC</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width">
 
 	<base href="/" />
 	<link rel="stylesheet" href="js/vendors/todomvc-common/base.css" />
 	<link rel="stylesheet" href="css/style.css" />
 
-	<script data-main="js/app/ApplicationRouter" src="js/vendors/requirejs/require.js"></script>
+	<!--[if lt IE 9]>
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<script data-main="js/app/MainApp" src="js/vendors/requirejs/require.js"></script>
 </head>
 <body>
 
